--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,28 @@ aiosignal==1.2.0
 antigate==1.4.0
 async-timeout==4.0.2
 attrs==22.1.0
+blessings==1.7
 certifi==2022.6.15
 charset-normalizer==2.1.0
+cssselect==1.1.0
 frozenlist==1.3.1
 idna==3.3
 isort==5.10.1
+lxml==4.9.1
+mccabe==0.6.1
 multidict==6.0.2
+mypy==0.971
+mypy-extensions==0.4.3
 pyasn1==0.4.8
+pycodestyle==2.6.0
 pydantic==1.9.2
+pyflakes==2.2.0
 python-dotenv==0.20.0
 requests==2.28.1
 rsa==4.9
 six==1.16.0
+testfixtures==6.18.5
+tomli==2.0.1
 types-aiofiles==0.8.10
 typing_extensions==4.3.0
 urllib3==1.26.11
