--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiosignal==1.2.0
 antigate==1.4.0
 async-timeout==4.0.2
 attrs==22.1.0
+bitstring==3.1.9
 blessings==1.7
 cachetools==5.2.0
 certifi==2022.6.15
