--- a/mypy.ini
+++ b/mypy.ini
@@ -6,7 +6,7 @@ warn_unreachable = True
 show_error_codes = True
 pretty = True
 color_output = True
-exclude=venv
+exclude=(venv|examples)
 ignore_missing_imports = True
 plugins = pydantic.mypy
 follow_imports = silent
