--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,4 @@ max-line-length = 120
 accept-encodings = utf-8
 max-local-variables = 9
 enable-extensions=G,M
-exclude = venv
-ignore =
-    ; Logging statement uses exception in arguments
-    G200,
+exclude = venv,examples
